Scrollbar fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,7 +101,7 @@ a {
   padding-top: 30px;
 }
 
-#genreList, #left {
+#left {
   overflow: scroll;
 }
 
